new update vc branch

--- a/vitor/components/buttons/index.html
+++ b/vitor/components/buttons/index.html
@@ -29,13 +29,13 @@
         <nav class="menu">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="../index.html">Home</a>
+                    <a href="../../index.html">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="../products/index.html">Products</a>
+                    <a href="../../products/index.html">Products</a>
                 </li>
                 <li class="menu-item">
-                    <a href="../dashboard.html">Dashboard</a>
+                    <a href="../../dashboard.html">Dashboard</a>
                 </li>
                 <li class="menu-item-expandable">
                     <span>Components</span>
@@ -67,14 +67,61 @@
                     </ul>
                 </li>
                 <li class="menu-item-login">
-                    <a href="../login.html" class="button is-sucess is-small" style="margin-left: 16px;">Login</a>
+                    <a href="../../login.html" class="button is-sucess is-small" style="margin-left: 16px;">Login</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="buttons-page">
+        <section class="hero-buttons">
+            <div class="container">
+                <div class="row">
+                    <div class="column is-12 is-vertical-top">
+                        <h1 class="hero-title-buttons">
+                            Creative color selection buttons!
+                        </h1>
+                        <h2 class="hero-subtitle-buttons">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque cumque earum laboriosam modi velit pariatur voluptates libero ipsam porro?
+                        </h2>
+                    </div>
+                </div>
+                <hr style="width:20%; border: 2px solid; margin-left: 0.2%; margin-bottom: 6%;">
+            </div>
+        </section>
 
+        <section class="buttons-page">
+            <code>
+                &#x3C;button class=&#x22;button is-primary&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-primary"> Click me! </button>
+                <hr>
+            <code>
+                &#x3C;button class=&#x22;button is-secondary&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-secondary"> Click me! </button>
+                <hr>
+            <code>
+                &#x3C;button class=&#x22;button is-danger&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-danger"> Click me! </button>
+                <hr>
+            <code>
+                &#x3C;button class=&#x22;button is-success&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-success"> Click me! </button>
+                <hr>
+            <code>
+                &#x3C;button class=&#x22;button is-info&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-info"> Click me! </button>
+                <hr>
+            <code>
+                &#x3C;button class=&#x22;button is-warning&#x22;&#x3E; Click me! &#x3C;/button&#x3E;
+            </code>
+                <button class="button is-warning"> Click me! </button>
+        </section>
+        <br>
     </main>
     
     <footer class="footer">
