--- a/vitor/scss/components/_forms.scss
+++ b/vitor/scss/components/_forms.scss
@@ -1,1 +1,110 @@
-// page test
+@import 'variables.scss';
+@import 'mixins.scss';
+
+$input-bg:#f1f1f1;
+
+.field{
+    &:not(:last-child) {
+    margin-bottom:32px;
+  }
+  &:hover .icon {
+    color:#000;
+    display: block;
+  }
+  input
+  textarea
+  select {
+    box-sizing: border-box;
+  }
+}
+  
+.forms-page .title.is-2 {
+margin-top:32px;
+}
+
+.form {
+margin-top:32px;
+}
+
+.form label {
+display:block;
+margin-bottom:8px;
+font-weight: 500;
+}
+  
+.input, .select {
+    min-width: 100px;
+    width: 96%;
+    border-color:#ccc;
+    background:$input-bg;
+
+    &:hover {
+        border:1px solid #333;
+    }
+    &:focus {
+        border:1px solid $secondary;
+    }
+    &:not(.is-small) {
+        @extend %control;
+    }
+
+    &.is-small {
+        @extend %control-small;
+    }
+    &.is-dark {
+        color:#fff;
+        background:#333;
+        border:0px solid #333;
+    }
+    ~ .message {
+        margin-top:6px;
+        font-size:12px;
+        color:$secondary;
+
+    &.is-danger {
+        color:$danger;
+    }
+
+    &.is-info {
+        color:$info;
+    }
+  }
+}
+ 
+.textarea {
+    min-width: 200px;
+    min-height: 80px;
+    padding:8px;
+    background:none;
+    border:1px solid #555;
+    border-radius: 8px;
+    outline:0;
+    &:hover {
+        border:1px solid #000;
+    }
+    &:focus {
+        border:1px solid $secondary;
+    }
+}
+
+.select {
+height:40px;
+min-width: 200px;
+padding:4px 8px;
+border:none;
+background:none;
+outline:0;
+border-bottom:1px solid #555;
+}
+
+.control{
+    display:inline-block;
+    label {
+        display:inline-block;
+        font-weight: 300;
+    }
+    input {
+        display:inline-block;
+    }
+}
+
