--- a/vitor/scss/main.scss
+++ b/vitor/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'components/buttons.scss';
+@import 'components/forms.scss';
 @import 'components/grid.scss';
 @import 'components/variables.scss';
 
@@ -161,9 +162,23 @@ section{
     color: $secondary;
 }
   
+.header.splash-header {
+  background: #04050A;
+  padding: 14px;
+  min-height: 40px;
+  display: flex;
+  justify-content: space-between;
+  position:fixed;
+  width: 100%;
+  .menu {
+    float: right;
+    margin-right: 24px;
+  }
+}
+
 .header {
   background: #04050A;
-  padding: 16px;
+  padding: 14px;
   min-height: 40px;
   display: flex;
   justify-content: space-between;
@@ -196,6 +211,9 @@ figure {
   margin: 0;
 }
 
+#content-splash {
+  padding: 90px 0 0 0;
+}
 
 
 
