--- a/vitor/css/main.css
+++ b/vitor/css/main.css
@@ -131,6 +131,14 @@
   float: right;
   line-height: 40px; }
 
+.card {
+  display: block;
+  background: #fff;
+  border-radius: 4px; }
+  .card .card-content {
+    padding: 16px;
+    box-sizing: border-box; }
+
 .button:not(.is-small), .input:not(.is-small), .select:not(.is-small) {
   position: relative;
   line-height: 14px;
@@ -295,6 +303,29 @@
       width: 91.66666666%; }
     .row .column.is-12 {
       width: 100%; }
+
+.grid-page {
+  background: #f1f1f1; }
+
+.grid-container {
+  display: grid;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 20% auto 30%;
+  grid-template-rows: auto;
+  background-color: #04050A;
+  padding: 16px;
+  margin: 38px; }
+
+.grid-item {
+  background-color: #f1f1f1;
+  opacity: 0.85;
+  border: none;
+  padding: 50px;
+  font-size: 22px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
+  text-align: center; }
 
 body {
   margin: 0;
