--- a/vitor/scss/components/_grid.scss
+++ b/vitor/scss/components/_grid.scss
@@ -1,3 +1,4 @@
+@import 'variables.scss';
 
 .row {
     display:flex;
@@ -57,3 +58,33 @@
         }
     }
 }
+
+.grid-page {
+    background: #f1f1f1;
+}
+
+.box {
+
+}
+
+.grid-container {
+    display: grid;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    grid-template-columns: 20% auto 30%;
+    grid-template-rows: auto;
+    background-color: #04050A;
+    padding: 16px;
+    margin: 38px;
+  }
+  
+  .grid-item {
+    background-color: #f1f1f1;
+    opacity: 0.85;
+    border: none;
+    padding: 50px;
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    text-align: center;
+  }
